fix: Partition constructor was creating extra partition + new active segments get created properly when needed